Login with Google and with email
